service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuard-service
spec:
  type: NodePort
  selector:
    app: kuard
  ports:
    - port: 8080
